--- a/index.html
+++ b/index.html
@@ -12,27 +12,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
-    <div class="page">
-      <div id="homepage-app">
-        <div class="search">
-          <div class="input-group mb-3">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Search"
-              aria-label="Username"
-              id="user-search"
-              autocomplete="off"
-            />
-          </div>
-        </div>
-        <div id="users-wrap">
-          <div class="spinner-border" role="status"></div>
-        </div>
-      </div>
-    </div>
+    <div id="app" class="page"></div>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="js/homepage.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
